--- a/index.html
+++ b/index.html
@@ -20,10 +20,6 @@
 		<h1><span class="border">GRANT ABEL</span></h1>
 		<img src="Images/me.jpeg" alt="self portrait" class="img">
 	</div>
-    <br>
-    <br>
-    <br>
-    <br>
 		
   	<h2> ABOUT ME </h2>
 		<div class="copyborder">
@@ -36,132 +32,83 @@
 			design and beginning design concepts. While I had the mindset to pursue this further as I entered college,
 			ultimately I changed course of degree. Now at this stage in life, looking to come back to the tech industry, I
 			genuinely regret the decision to pursue other avenues for reasons that weren't my own.
-			<p id=""> This is my time. Now I feel free. Welcome to my porfolio. </p>
+			<p id="now"> Now is my time | Welcome to my porfolio </p>
     </div>
-    <br>
-    <br>
 	
-        <h2> COLLECTION OF WORK </h2>
-        <div class="copyborder">
-            <ol>
-                <li>
-                    <a href="https://github.com/gtayyy/Week-1---Tuesday.git" target="_blank"><strong> Week 1 |
-                            Monday/Tuesday </strong></a>
-                </li>
-
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
-                </p>
-
-                <li>
-                    <a href="https://github.com/gtayyy/Pet-webite.git" target="_blank"><strong> Assignment | Pet Website
-                        </strong></a>
-                </li>
-
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
-                </p>
-
-                <li>
-                    <a href="https://github.com/gtayyy/blog-site.git" target="_blank"><strong> Assignment | Blog
-                        </strong></a>
-                </li>
-
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
-                </p>
-
-                <li>
-                    <a href="https://github.com/gtayyy/thursday.git" target="_blank"><strong> Week 1 | Thursday
-                        </strong></a>
-                </li>
-
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
-                </p>
-            </ol>
-        </div>
+    <h2> COLLECTION OF WORK </h2>
+    <div class="copyborder">
+      <ol>
+        <li><a href="https://github.com/gtayyy/Week-1---Tuesday.git" target="_blank"><strong> Week 1 |
+              Monday/Tuesday </strong></a>
+        </li>
+				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+							et dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
+				</p>
+        <li><a href="https://github.com/gtayyy/Pet-webite.git" target="_blank"><strong> Assignment | Pet Website
+            </strong></a>
+        </li>
+				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+					et dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
+				</p>
+        <li><a href="https://github.com/gtayyy/blog-site.git" target="_blank"><strong> Assignment | Blog
+            </strong></a>
+        </li>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+				   et dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
+				</p>
+        <li><a href="https://github.com/gtayyy/thursday.git" target="_blank"><strong> Week 1 | Thursday
+            </strong></a>
+        </li>
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+          	et dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
         </p>
-        <br>
-        <br>
-
-        <p>
-        <h2> PROFESSIONAL/PERSONAL BACKGROUND </h2>
-        </p>
-
-        <div class="copyborder">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Nunc congue nisi vitae suscipit tellus mauris. Faucibus et molestie ac feugiat sed lectus.
-            Egestas
-            sed sed risus pretium quam. Ut eu sem integer vitae justo eget magna. Ridiculus mus mauris vitae ultricies
-            leo
-            integer. Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus. Ac tortor dignissim convallis
-            aenean.
-            Pellentesque elit eget gravida cum sociis natoque penatibus et. Eu volutpat odio facilisis mauris sit amet
-            massa
-            vitae. Tristique senectus et netus et.
-        </div>
-        <br>
-        <br>
-
-        <p>
-        <h2> EDUCATION & SHIFT TO PROGRAMMING </h2>
-        </p>
-        <ul>
-            <div class="copyborder">
-                <li>
-                    INSTALLATION MANAGER 10.2021-CURRENT | SMARTRENT
-                    <br>
-                    <em>Facilitating and orchestrating a smooth installation process is my
-                        number one priority. I work between the property management
-                        and residents while overseeing a small crew of subcontractors
-                        completing the install of new devices. Maintaining a high level of
-                        QA is priority two, which ensures an easy transition for the property
-                        management and residents, as well as minimizing the number of
-                        issues post install.
-                    </em>
-                    <br>
-                    <br>
-                <li>
-                    COMMUNITY MANAGER 04.2021-10.2021 | MILL CREEK RESIDENTIAL
-                    <br>
-                    <em>Oversaw and managed all operation aspects of the community in
-                        order to drive company initiatives and goals. To do so, budgets
-                        were created and adhered to, cost saving initiatives were sought
-                        and sales efforts were focused upon. Upkeep of property
-                        appearances via maintenance staff and vendors was a large part
-                        of daily operations in order to raise resident retention rate.</em>
-            </div>
-        </ul>
-        <br>
-        <br>
-
-        <p>
-        <h2> WHEN NOT WORKING... </h2>
-        </p>
-
-    <p>
-    <div class="copyborder"> Turpis cursus in hac habitasse platea dictumst quisque sagittis. Vitae tortor
-            condimentum lacinia
-            quis.
-            Egestas diam in arcu cursus euismod quis. Tempor orci dapibus ultrices in iaculis nunc. Luctus accumsan
-            tortor
-            posuere ac ut. At tellus at urna condimentum mattis pellentesque id. Vitae justo eget magna fermentum
-            iaculis.
-            Purus viverra accumsan in nisl nisi scelerisque. Malesuada proin libero nunc consequat interdum varius sit.
-            Sapien et ligula ullamcorper malesuada proin libero. Nulla aliquet enim tortor at auctor urna nunc id
-            cursus.
-            Eget felis eget nunc lobortis. Phasellus vestibulum lorem sed risus. Auctor neque vitae tempus quam. Et odio
-            pellentesque diam volutpat commodo sed. Tortor dignissim convallis aenean et tortor at risus. Ullamcorper
-            sit
-            amet risus nullam eget. Ridiculus mus mauris vitae ultricies leo integer malesuada nunc.
+      </ol>
     </div>
-    </p>
+
+    <h2> PROFESSIONAL/PERSONAL BACKGROUND </h2>
+		<div class="copyborder">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua. Nunc congue nisi vitae suscipit tellus mauris. Faucibus et molestie ac feugiat sed lectus.
+          Egestas sed sed risus pretium quam. Ut eu sem integer vitae justo eget magna. Ridiculus mus mauris vitae ultricies
+          leo integer. Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus. Ac tortor dignissim convallis
+          aenean. Pellentesque elit eget gravida cum sociis natoque penatibus et. Eu volutpat odio facilisis mauris sit amet
+          massa vitae. Tristique senectus et netus et.
+    </div>
+
+    <h2> EDUCATION & SHIFT TO PROGRAMMING </h2>
+    <div class="copyborder">
+			<ul>
+        <li> INSTALLATION MANAGER 10.2021-CURRENT | SMARTRENT
+        <br>
+				<em>Facilitating and orchestrating a smooth installation process is my
+            number one priority. I work between the property management
+            and residents while overseeing a small crew of subcontractors
+            completing the install of new devices. Maintaining a high level of
+            QA is priority two, which ensures an easy transition for the property
+            management and residents, as well as minimizing the number of
+            issues post install. </em>
+        <p>
+					<li> COMMUNITY MANAGER 04.2021-10.2021 | MILL CREEK RESIDENTIAL
+        	<br>
+					<em>Oversaw and managed all operation aspects of the community in
+            order to drive company initiatives and goals. To do so, budgets
+            were created and adhered to, cost saving initiatives were sought
+            and sales efforts were focused upon. Upkeep of property
+            appearances via maintenance staff and vendors was a large part
+            of daily operations in order to raise resident retention rate.</em>
+				</p>
+      </ul>
 		</div>
-  </body>
-</html>
+
+    <h2> WHEN NOT WORKING... </h2>
+			<div class="copyborder"> Turpis cursus in hac habitasse platea dictumst quisque sagittis. Vitae tortor
+				condimentum lacinia quis. Egestas diam in arcu cursus euismod quis. Tempor orci dapibus ultrices in
+				iaculis nunc. Luctus accumsan tortor posuere ac ut. At tellus at urna condimentum mattis pellentesque
+				id. Vitae justo eget magna fermentum iaculis. Purus viverra accumsan in nisl nisi scelerisque.
+				Malesuada proin libero nunc consequat interdum varius sit. Sapien et ligula ullamcorper malesuada proin 
+				libero. Nulla aliquet enim tortor at auctor urna nunc id cursus. Eget felis eget nunc lobortis. 
+				Phasellus vestibulum lorem sed risus. Auctor neque vitae tempus quam. Et odio pellentesque diam 
+				volutpat commodo sed. Tortor dignissim convallis aenean et tortor at risus. Ullamcorper sit amet risus 
+				nullam eget. Ridiculus mus mauris vitae ultricies leo integer malesuada nunc.
+			</div>
+	</body>
